<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">老婆管账</string>
    <string name="drawopen">Open Drawer</string>
    <string name="drawclose">Close Drawer</string>
    <string name="record">记一笔</string>
    
    <string name="record_date">日期</string>
    <string name="record_category">类别</string>
    <string name="record_amount">金额</string>
    <string name="record_account">账户</string>
    <string name="record_save_again">保存再记</string>
    <string name="record_warning">请输入金额</string>
    <string name="record_warning_dialog_button">确定</string>
    
    <string name="budget_total">总预算：</string>
    <string name="budget_used">已用：</string>
    <string name="budget_left">结余：</string>
    <string name="budget_category_total">总额：</string>
    <string name="budget_category_left">余额：</string>
    <string name="budget_edit_done_btn">确定</string>
    
    <string-array name="drawer_list_item">
        <item>主页</item>
        <item>账本</item>
        <item>流水</item>
        <item>统计</item>
        <item>预算</item>
        <item>设置</item>
    </string-array>
    
    
    <string-array name="record_categories">
        <item>早中晚饭</item>
        <item>行车交通</item>
        <item>房租住宿</item>
        <item>服装饰品</item>
        <item>娱乐腐败</item>
        <item>生活杂项</item>
    </string-array>
    
    <string-array name="record_account_types">
        <item>现金支付</item>
        <item>银行卡</item>
        <item>支付宝等</item>
    </string-array>
    <string name="statement_left">&lt;</string>
    <string name="statement_right">&gt;</string>    
    
    <!-- UI String -->
    <string name="circle_total">预算</string>
    <string name="circle_spent">消费</string>
    
    <string name="home_tab_me">我的消费</string>
    <string name="homt_tab_other">对方消费</string>
    <string name="homt_tab_total">总计消费</string>

    <string name="login">登入</string>
    <string name="register">注册</string>
    <string name="login_user_hint">用户名或邮箱</string>
    <string name="login_passwd_hint">密码</string>
</resources>
