<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:text="@string/record_date"/>

        <Button
            android:id="@+id/record_set_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Set Date"
            android:background="@null"
            android:textSize="22sp"
            android:gravity="right|center"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">
           <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/record_category"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">
           <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/record_amount"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp">
           <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/record_account"/>
    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="place holder"
            android:background="@null"
            android:textSize="28sp"
            android:textColor="#ccc"
            android:layout_weight="1"/>
    <Button
            android:id="@+id/record_save_and_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_save_again"
            android:background="@android:color/holo_blue_dark"
            android:textSize="28sp"
            android:textColor="#ccc"
            android:layout_gravity="bottom"/>
</LinearLayout>
