<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout 
            android:id="@+id/firtline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
     		android:orientation="horizontal"
     		android:paddingBottom="@dimen/bottom_padding_dim">
     		
            <TextView 
            android:id="@+id/budget_total_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/left_padding_dim"
            android:text="@string/budget_total"
            android:textSize="@dimen/text_Size"
            android:layout_weight="1"/>
            <EditText 
            android:id="@+id/budegt_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_Size"
			android:layout_weight="1"
            android:paddingRight="@dimen/right_padding_dim"
            android:hint="0.0"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:gravity="right"/>            
        </LinearLayout>
                        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
     		android:orientation="horizontal"
     		android:layout_below="@id/firtline"
     		android:paddingTop="@dimen/top_padding_dim">
     		<LinearLayout
     		    android:layout_width="0dp"
     		    android:layout_height="match_parent"
     		    android:layout_weight="1"
     		    android:orientation="horizontal">
     		    <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_used"
                android:textSize="@dimen/text_size_medium"
                android:paddingLeft="@dimen/left_padding_dim"
                />
     		    <TextView 
     		        android:id="@+id/budget_total_used"
     		        android:layout_width="0dp"
     		        android:layout_height="wrap_content"
     		        android:textSize="@dimen/text_size_medium"
     		        android:paddingRight="@dimen/right_padding_dim"
     		        android:gravity="right"
     		        android:layout_weight="1"
     		        android:text="0.0"/>
     		</LinearLayout>
     		    <LinearLayout
     		    android:layout_width="0dp"
     		    android:layout_height="match_parent"
     		    android:layout_weight="1"
     		    android:orientation="horizontal">
     		    <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/budget_left"
                android:textSize="@dimen/text_size_medium"
                android:paddingLeft="@dimen/left_padding_dim"
                />
     		    <TextView 
     		        android:id="@+id/budget_total_left"
     		        android:layout_width="0dp"
     		        android:layout_height="wrap_content"
     		        android:textSize="@dimen/text_size_medium"
     		        android:paddingRight="@dimen/right_padding_dim"
     		        android:layout_weight="1"
     		        android:gravity="right"
     		        android:text="0.0"/>
     		</LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tab_indicator_highlightcolor"/>
    <ListView 
        android:id="@+id/budget_subcatgory_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </ListView>
    <LinearLayout 
        android:id="@+id/edit_layout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">
        <TextView 
            android:id="@+id/budget_edit_category_name"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_Size"
            android:gravity="center"/>
        <com.djchen.View.EditTextBackEvent
        android:id="@+id/budget_edit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:imeOptions="actionDone"
        android:gravity="right"/>
        <Button 
            android:id="@+id/budget_edit_done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/budget_edit_done_btn"/>
    </LinearLayout>

</LinearLayout>
